container styles aligned correctly

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,25 @@
 html, body {
   height: 100%;
+  font-family: 'Raleway', sans-serif;
+}
+
+h1, p {
+  font-size: 2.5rem;
 }
 
 .container {
-  max-width: 800px;
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
   text-align: center;
 }
 
 #city {
   color: #BADA55;
+}
+
+.temp {
+  
 }
